--- a/WpfApp2/WpfApp2/Patients.xaml
+++ b/WpfApp2/WpfApp2/Patients.xaml
@@ -5,23 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Patients" Height="350" Width="520">
+        Title="Patients" Height="377.432" Width="660.946">
     <Grid>
-        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click"/>
-        <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
-        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
-        <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="369,199,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
-        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="369,78,-14,0" TextWrapping="Wrap" Text="Patient by ID" VerticalAlignment="Top" Width="110"/>
-        <Label x:Name="todays_patient" Content="Today's Patient" HorizontalAlignment="Left" Margin="28,78,0,0" VerticalAlignment="Top"/>
-        <Image x:Name="bt_edit" HorizontalAlignment="Left" Height="17" Margin="159,85,0,0" VerticalAlignment="Top" Width="26" Source="edit_button.png"/>
-        <Button Height="24" Width="24" Margin="345,78,143,217" Click="Button_Click">
+        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="67,0,0,0"/>
+        <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="237,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
+        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="407,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
+        <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="28,298,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="473,151,0,0" TextWrapping="Wrap" Text="Patient by ID" VerticalAlignment="Top" Width="110"/>
+        <Label x:Name="todays_patient" Content="Today's Patient" HorizontalAlignment="Left" Margin="28,70,0,0" VerticalAlignment="Top"/>
+        <Button Height="24" Width="24" Margin="596,151,33,171" Click="Button_Click">
             <Button.Template>
                 <ControlTemplate>
                     <Image Source="search_icon.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,122,0,0" VerticalAlignment="Top" Height="170" Width="282"/>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,114,0,0" VerticalAlignment="Top" Height="170" Width="425"/>
 
     </Grid>
 </Window>
