--- a/WpfApp2/WpfApp2/main_screen.xaml
+++ b/WpfApp2/WpfApp2/main_screen.xaml
@@ -11,9 +11,9 @@
         <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="228,1,0,0" VerticalAlignment="Top" Width="170" Cursor="Hand" Height="37" Click="bt_patients_Click"/>
         <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="398,1,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
         <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="148,272,0,0" VerticalAlignment="Top" Width="100" Height="50" Click="bt_register_patient_Click"/>
-        <Button x:Name="bt_new_booking" Content="New Booking" HorizontalAlignment="Left" Margin="24,272,0,0" VerticalAlignment="Top" Width="100" Cursor="Hand" Height="50"/>
-        <TextBox x:Name="search_patient" HorizontalAlignment="Left" Height="24" Margin="475,190,0,0" TextWrapping="Wrap" Text="Search Patient" VerticalAlignment="Top" Width="97" Cursor="IBeam"/>
-        <TextBox x:Name="search_booking" HorizontalAlignment="Left" Height="24" Margin="475,133,0,0" TextWrapping="Wrap" Text="Search Booking" VerticalAlignment="Top" Width="97" Cursor="IBeam"/>
+        <Button x:Name="bt_new_booking" Content="New Booking" HorizontalAlignment="Left" Margin="24,272,0,0" VerticalAlignment="Top" Width="100" Cursor="Hand" Height="50" Click="bt_new_booking_Click"/>
+        <TextBox x:Name="search_patient" HorizontalAlignment="Left" Height="24" Margin="475,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" Cursor="IBeam"/>
+        <TextBox x:Name="search_booking" HorizontalAlignment="Left" Height="24" Margin="475,133,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" Cursor="IBeam"/>
         <Label x:Name="todays_patient" Content="Todays's Patient" HorizontalAlignment="Left" Margin="25,64,0,0" VerticalAlignment="Top" Height="27" Width="99"/>
         <Button x:Name="bTsearch" Height="24" Width="24" Margin="588,133,41,189" Click="button_searchBooking">
             <Button.Template>
@@ -30,6 +30,8 @@
             </Button.Template>
         </Button>
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="25,96,0,0" VerticalAlignment="Top" Height="160" Width="430"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="475,117,0,0" TextWrapping="Wrap" Text="Search booking" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="475,169,0,0" TextWrapping="Wrap" Text="Search patient" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
