showBookingGridDate method, datepicker control implementation

--- a/WpfApp2/WpfApp2/booking_screen.xaml
+++ b/WpfApp2/WpfApp2/booking_screen.xaml
@@ -5,18 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Bookings" Height="377.432" Width="660.946">
+        Title="Bookings" Height="400" Width="800
+        ">
     <Grid>
-        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="61,0,0,0"/>
-        <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="231,0,0,0" VerticalAlignment="Top" Width="170" Cursor="Hand" Height="37" Click="bt_patients_Click"/>
-        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="401,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="bt_staff_Click"/>
-        <Button x:Name="bt_new_booking" Content="New Booking" HorizontalAlignment="Left" Margin="483,303,0,0" VerticalAlignment="Top" Width="110" Height="24" Click="bt_new_booking_Click"/>
-        <TextBox x:Name="booking_search" HorizontalAlignment="Left" Height="24" Margin="518,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110"/>
-        <Calendar x:Name="booking_calendar" HorizontalAlignment="Left" Margin="449,121,0,0" VerticalAlignment="Top" Width="179"/>
-        <DataGrid x:Name="bookingsGrid" AutoGenerateColumns="True" HorizontalAlignment="Left" Margin="22,113,0,0" VerticalAlignment="Top" Height="176" Width="409"/>
-        <Button x:Name="bTsearch" Content="Search" HorizontalAlignment="Left" Margin="425,74,0,0" VerticalAlignment="Top" Width="75" Click="bTsearch_Click"/>
-        <Label x:Name="label" Content="Today's Bookings" HorizontalAlignment="Left" Margin="22,80,0,0" VerticalAlignment="Top" FontSize="13.333"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="518,54,0,0" TextWrapping="Wrap" Text="Search by ID" VerticalAlignment="Top"/>
-
+        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="21,20,0,0"/>
+        <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="191,20,0,0" VerticalAlignment="Top" Width="170" Cursor="Hand" Height="37" Click="bt_patients_Click"/>
+        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="361,20,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="bt_staff_Click"/>
+        <Button x:Name="bt_new_booking" Content="New Booking" HorizontalAlignment="Left" Margin="23,320,0,0" VerticalAlignment="Top" Width="110" Height="24" Click="bt_new_booking_Click"/>
+        <TextBox x:Name="booking_search" HorizontalAlignment="Left" Height="24" Margin="657,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110"/>
+        <DataGrid x:Name="bookingsGrid" AutoGenerateColumns="True" HorizontalAlignment="Left" Margin="22,86,0,0" VerticalAlignment="Top" Height="216" Width="575"/>
+        <Button x:Name="bTsearch" Content="Search" HorizontalAlignment="Left" Margin="626,113,0,0" VerticalAlignment="Top" Width="24" Click="bTsearch_Click" >
+            <Button.Template>
+                <ControlTemplate>
+                    <Image Source="search_icon.png"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Label x:Name="label" Content="Today's Bookings" HorizontalAlignment="Left" Margin="22,53,0,0" VerticalAlignment="Top" FontSize="13.333"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="626,86,0,0" TextWrapping="Wrap" Text="Search by ID" VerticalAlignment="Top"/>
+        <DatePicker x:Name="dp1" HorizontalAlignment="Left" Margin="666,225,0,0" VerticalAlignment="Top" IsTodayHighlighted="True"/>
+        <Button x:Name="bTsearchDate" Content="Button" HorizontalAlignment="Left" Margin="626,225,0,0" VerticalAlignment="Top" Width="24" Click="bTsearchDate_Click">
+            <Button.Template>
+                <ControlTemplate>
+                    <Image Source="search_icon.png"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="622,199,0,0" TextWrapping="Wrap" Text="Show bookings on this date" VerticalAlignment="Top" Width="156"/>
     </Grid>
 </Window>
