--- a/WpfApp2/WpfApp2/Patients.xaml
+++ b/WpfApp2/WpfApp2/Patients.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Patients" Height="377.432" Width="660.946">
+        Title="Patients" Height="377.432" Width="660.946" ResizeMode="NoResize">
     <Grid>
         <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="67,0,0,0"/>
         <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="237,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
