--- a/WpfApp2/WpfApp2/booking_screen.xaml
+++ b/WpfApp2/WpfApp2/booking_screen.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
         Title="Bookings" Height="400" Width="800
-        ">
+        " ResizeMode="NoResize">
     <Grid>
         <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="21,20,0,0"/>
         <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="191,20,0,0" VerticalAlignment="Top" Width="170" Cursor="Hand" Height="37" Click="bt_patients_Click"/>
