--- a/WpfApp2/WpfApp2/Patients.xaml
+++ b/WpfApp2/WpfApp2/Patients.xaml
@@ -5,23 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Patients" Height="377.432" Width="660.946" ResizeMode="NoResize">
+        Title="Patients" Height="400" Width="800" ResizeMode="NoResize">
     <Grid>
-        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="67,0,0,0"/>
-        <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="237,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
-        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="407,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
-        <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="28,298,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
-        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="473,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110"/>
+        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click" Margin="31,20,0,0"/>
+        <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="201,20,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
+        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="371,20,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
+        <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="28,320,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="575,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110"/>
         <Label x:Name="todays_patient" Content="Today's Patient" HorizontalAlignment="Left" Margin="28,70,0,0" VerticalAlignment="Top"/>
-        <Button Height="24" Width="24" Margin="596,151,33,171" Click="Button_Click">
+        <Button HorizontalAlignment="Left" Margin="715,195,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click">
             <Button.Template>
                 <ControlTemplate>
                     <Image Source="search_icon.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,114,0,0" VerticalAlignment="Top" Height="170" Width="425"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="473,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Search for patient"/><Run Text="s"/></TextBlock>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,114,0,0" VerticalAlignment="Top" Height="191" Width="523"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="575,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Search for patient"/><Run Text="s"/></TextBlock>
 
     </Grid>
 </Window>
