--- a/WpfApp2/WpfApp2/staff_menu.xaml
+++ b/WpfApp2/WpfApp2/staff_menu.xaml
@@ -5,30 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Staff Screen" Height="377.432" Width="660.946" ResizeMode="NoResize">
+        Title="Staff Screen" Height="400" Width="800" ResizeMode="NoResize">
     <Grid Margin="0,0,5,10.5" Cursor="Hand" RenderTransformOrigin="0.093,0.641">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btn_bookings" Content="Bookings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Cursor="Hand" RenderTransformOrigin="-0.007,-0.762" Click="btn_bookings_Click" Height="37" ClickMode="Press" Margin="55,0,0,0"/>
-        <Button x:Name="btn_patients" Content="Patients" HorizontalAlignment="Left" Margin="225,0,0,0" VerticalAlignment="Top" Width="170" Height="37" ClickMode="Press" Click="btn_patients_Click" Cursor="Hand"/>
-        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="395,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="btn_home_Click"/>
-        <Calendar HorizontalAlignment="Left" Margin="461,121,0,0" VerticalAlignment="Top" Width="179" Height="168"/>
-        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="519,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110" AutomationProperties.Name="Search" Cursor="IBeam">
+        <Button x:Name="btn_bookings" Content="Bookings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Cursor="Hand" RenderTransformOrigin="-0.007,-0.762" Click="btn_bookings_Click" Height="37" ClickMode="Press" Margin="198,29,0,0"/>
+        <Button x:Name="btn_patients" Content="Patients" HorizontalAlignment="Left" Margin="368,29,0,0" VerticalAlignment="Top" Width="170" Height="37" ClickMode="Press" Click="btn_patients_Click" Cursor="Hand"/>
+        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="28,29,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="btn_home_Click"/>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="583,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="110" AutomationProperties.Name="Search" Cursor="IBeam">
             <TextBox.Background>
                 <ImageBrush/>
             </TextBox.Background>
         </TextBox>
         <Label x:Name="staff_on_duty_date" Content="Staff on Duty (dd/mm/yy)" HorizontalAlignment="Left" Margin="28,88,0,0" VerticalAlignment="Top" Height="28" Width="157"/>
-        <Button x:Name="StaffSearchbt" Height="24" Width="24" Margin="461,88,165,225.5" Click="Search_Staff">
+
+        <Button x:Name="StaffSearchbt" HorizontalAlignment="Left" Margin="714,198,0,0" VerticalAlignment="Top" Width="24" Click="Search_Staff">
             <Button.Template>
                 <ControlTemplate>
                     <Image Source="search_icon.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,116,0,0" VerticalAlignment="Top" Height="173" Width="414"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="519,72,0,0" TextWrapping="Wrap" Text="Search for staff" VerticalAlignment="Top" RenderTransformOrigin="0.928,1.725"/>
-
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,116,0,0" VerticalAlignment="Top" Height="214" Width="533"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="583,182,0,0" TextWrapping="Wrap" Text="Search for staff" VerticalAlignment="Top" RenderTransformOrigin="0.928,1.725"/>
     </Grid>
 </Window>
