added missing label

--- a/WpfApp2/WpfApp2/staff_menu.xaml
+++ b/WpfApp2/WpfApp2/staff_menu.xaml
@@ -37,5 +37,6 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
+        <Label Content="Search for shifts" HorizontalAlignment="Left" Margin="592,221,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
